drop redundant language code from language names
see tpo/web/lego@bf59a3c8

--- a/databags/alternatives.ini
+++ b/databags/alternatives.ini
@@ -2,126 +2,126 @@
 direction = text-left
 order = order-last
 url =  /
-language = English (en-US)
+language = English
 
 [ar]
 direction = text-right
 order = order-last
 url = /ar/
-language = العربية (ar)
+language = العربية
 
 [be]
 direction = text-left
 order = order-last
 url = /be/
-language = беларуская (be)
+language = беларуская
 
 [bg]
 direction = text-left
 order = order-last
 url = /bg/
-language = български (bg)
+language = български
 
 [bn]
 direction = text-left
 order = order-last
 url = /bn/
-language = বাংলা ভাষা (bn)
+language = বাংলা ভাষা
 
 [ca]
 direction = text-left
 order = order-last
 url = /ca/
-language = Català (ca)
+language = Català
 
 [de]
 direction = text-left
 order = order-last
 url = /de/
-language = Deutsch (de)
+language = Deutsch
 
 [el]
 direction = text-left
 order = order-last
 url = /el/
-language = Ελληνικά (el)
+language = Ελληνικά
 
 [es]
 direction = text-left
 order = order-last
 url = /es/
-language = Español (es)
+language = Español
 
 [fa]
 direction = text-right
 order = order-last
 url = /fa/
-language = فارسی (fa)
+language = فارسی
 
 [fi]
 direction = text-left
 order = order-last
 url = /fi/
-language = Suomi (fi)
+language = Suomi
 
 [fr]
 direction = text-left
 order = order-last
 url = /fr/
-language = Français (fr)
+language = Français
 
 [ga]
 direction = text-left
 order = order-last
 url = /ga/
-language = Gaeilge (ga)
+language = Gaeilge
 
 [he]
 direction = text-right
 order = order-last
 url = /he/
-language = עברית (he)
+language = עברית
 
 [hu]
 direction = text-left
 order = order-last
 url = /hu/
-language = Magyar nyelv (hu)
+language = Magyar nyelv
 
 [id]
 direction = text-left
 order = order-last
 url = /id/
-language = bahasa Indonesia (id)
+language = bahasa Indonesia
 
 [it]
 direction = text-left
 order = order-last
 url = /it/
-language = Italiano (it)
+language = Italiano
 
 [is]
 direction = text-left
 order = order-last
 url = /is/
-language = Íslenska (is)
+language = Íslenska
 
 [ja]
 direction = text-left
 order = order-last
-language = 日本語 (ja)
+language = 日本語
 url = /ja/
 
 [ka]
 direction = text-left
 order = order-last
-language = ქართული (ka)
+language = ქართული
 url = /ka/
 
 [km]
 direction = text-left
 order = order-last
-language = ភាសាខ្មែរ (km)
+language = ភាសាខ្មែរ
 url = /km/
 
 [ko]
@@ -133,113 +133,113 @@ url = /ko/
 [lt]
 direction = text-left
 order = order-last
-language = lietuvių (lt)
+language = lietuvių
 url = /lt/
 
 [mk]
 direction = text-left
 order = order-last
-language = македонски (mk)
+language = македонски
 url = /mk/
 
 [my]
 direction = text-left
 order = order-last
-language = မြန်မာဘာသာ (my)
+language = မြန်မာဘာသာ
 url = /my/
 
 [pl]
 direction = text-left
 order = order-last
 url = /pl/
-language = polski (pl)
+language = polski
 
 [ps]
 direction = text-right
 order = order-last
 url = /ps/
-language = پښتو (ps)
+language = پښتو
 
 [pt-BR]
 direction = text-left
 order = order-last
 url = /pt-BR/
-language = Português Br. (pt-BR)
+language = Português Br.
 
 [pt-PT]
 direction = text-left
 order = order-last
 url = /pt-PT/
-language = Português Port. (pt-PT)
+language = Português Port.
 
 [ro]
 direction = text-left
 order = order-last
 url = /ro/
-language = Română (ro)
+language = Română
 
 [ru]
 direction = text-left
 order = order-last
 url = /ru/
-language = Русский (ru)
+language = Русский
 
 [sq]
 direction = text-left
 order = order-last
 url = /sq/
-language = Shqip (sq)
+language = Shqip
 
 [sw]
 direction = text-left
 order = order-last
 url = /sw/
-language = Kiswahili (sw)
+language = Kiswahili
 
 [th]
 direction = text-left
 order = order-last
 url = /th/
-language = ภาษาไทย (th)
+language = ภาษาไทย
 
 [tk]
 direction = text-left
 order = order-last
 url = /tk/
-language = türkmençe (tk)
+language = türkmençe
 
 [tr]
 direction = text-left
 order = order-last
 url = /tr/
-language = Türkçe (tr)
+language = Türkçe
 
 [uk]
 direction = text-left
 order = order-last
 url = /uk/
-language  = українська (uk)
+language  = українська
 
 [vi]
 direction = text-left
 order = order-last
 url = /vi/
-language  = Tiếng Việt (vi)
+language  = Tiếng Việt
 
 [wo]
 direction = text-left
 order = order-last
 url = /wo/
-language  = Wolof (wo)
+language  = Wolof
 
 [zh-CN]
 direction = text-left
 order = order-last
 url = /zh-CN/
-language = 简体中文 (zh-CN)
+language = 简体中文
 
 [zh-TW]
 direction = text-left
 order = order-last
 url = /zh-TW/
-language = 正體中文 (zh-TW)
+language = 正體中文
