--- a/assets/.htaccess
+++ b/assets/.htaccess
@@ -8,22 +8,26 @@ RewriteRule ^security-slider.html$ /security-settings/ [R=302,L]
 RewriteRule ^(.*)/becoming-tor-translator https://community.torproject.org/localization/becoming-tor-translator/ [R=302,L]
 RewriteRule ^becoming-tor-translator https://community.torproject.org/localization/becoming-tor-translator/ [R=302,L]
 
-# forward requests in /en to the root folder
-RewriteRule ^(en-US|en)$ / [R=302,L]
-RewriteRule ^(en-US|en)/(.*) /$2 [R=302,L]
+# Redirects for languages
 
-# Rewrites for languages that have a different mapping in the page
-RewriteRule ^(es-ES|es-MX|es-CO|es-AR)$ /es [R=302,L]
-RewriteRule ^(es-ES|es-MX|es-CO|es-AR)/(.*) /es/$2 [R=302,L]
+# if page doesn't exist and is prefixed with a language code
+# set environment variables to attempt a redirect, see rules below
+RewriteCond %{DOCUMENT_ROOT}%{REQUEST_URI} !-f
+RewriteCond %{DOCUMENT_ROOT}%{REQUEST_URI} !-d
+RewriteCond "%{REQUEST_URI}" "^/([a-z]{2})(?:-[A-Z]{2})?/(.*)" [OR]
+RewriteCond "%{REQUEST_URI}" "^/([a-z]{2})(?:-[A-Z]{2})?$"
+RewriteRule ^ - [E=langredir:1,E=langredir_code:%1,E=langredir_subpath:%2]
 
-# Rewrites for languages that have a Tor Browser release
-# but don't have a translated manual
-# this languages are the priority for translation of the Tor Browser User Manual!
-RewriteRule ^(cs|da|ms|nb-NO|nl|sv-SE)$ / [R=302,L]
-RewriteRule ^(cs|da|ms|nb-NO|nl|sv-SE)/(.*) /$2 [R=302,L]
+# redirect if the language code without region variant exists
+# eg. redirect /es-AR to /es
+RewriteCond %{ENV:langredir} =1
+RewriteCond %{DOCUMENT_ROOT}/%{ENV:langredir_code}/%{ENV:langredir_subpath} -f [OR]
+RewriteCond %{DOCUMENT_ROOT}/%{ENV:langredir_code}/%{ENV:langredir_subpath} -d
+RewriteRule ^ /%{ENV:langredir_code}/%{ENV:langredir_subpath} [R=302,L]
 
-# we have only one translation for this locales
-RewriteRule ^bn-(BD|IN)$ /bn [R=302,L]
-RewriteRule ^bn-(BD|IN)/(.*) /bn/$2 [R=302,L]
-RewriteRule ^ga-IE(.*) /ga$1 [R=302,L]
-RewriteRule ^ga-IE$ /ga [R=302,L]
+# redirect if the translation requested isn't available
+# to the default language version of the page
+RewriteCond %{ENV:langredir} =1
+RewriteCond %{DOCUMENT_ROOT}/%{ENV:langredir_subpath} -f [OR]
+RewriteCond %{DOCUMENT_ROOT}/%{ENV:langredir_subpath} -d
+RewriteRule ^ /%{ENV:langredir_subpath} [R=302,L]
